--- a/solutions/pymc/hw-5.ipynb
+++ b/solutions/pymc/hw-5.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
       "text/plain": "           discipline gender  applications  awards\n0   Chemical sciences      m            83      22\n1   Chemical sciences      f            39      10\n2   Physical sciences      m           135      26\n3   Physical sciences      f            39       9\n4             Physics      m            67      18\n5             Physics      f             9       2\n6          Humanities      m           230      33\n7          Humanities      f           166      32\n8  Technical sciences      m           189      30\n9  Technical sciences      f            62      13",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>discipline</th>\n      <th>gender</th>\n      <th>applications</th>\n      <th>awards</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Chemical sciences</td>\n      <td>m</td>\n      <td>83</td>\n      <td>22</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Chemical sciences</td>\n      <td>f</td>\n      <td>39</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Physical sciences</td>\n      <td>m</td>\n      <td>135</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Physical sciences</td>\n      <td>f</td>\n      <td>39</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Physics</td>\n      <td>m</td>\n      <td>67</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Physics</td>\n      <td>f</td>\n      <td>9</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Humanities</td>\n      <td>m</td>\n      <td>230</td>\n      <td>33</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Humanities</td>\n      <td>f</td>\n      <td>166</td>\n      <td>32</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Technical sciences</td>\n      <td>m</td>\n      <td>189</td>\n      <td>30</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Technical sciences</td>\n      <td>f</td>\n      <td>62</td>\n      <td>13</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,6 +58,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "discipline      object\ngender          object\napplications     int64\nawards           int64\ndtype: object"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.dtypes"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +94,7 @@
       "text/plain": "    discipline  gender  applications  awards\n0            0       1            83      22\n1            0       0            39      10\n2            5       1           135      26\n3            5       0            39       9\n4            6       1            67      18\n5            6       0             9       2\n6            2       1           230      33\n7            2       0           166      32\n8            8       1           189      30\n9            8       0            62      13\n10           3       1           105      12\n11           3       0            78      17\n12           1       1           156      38\n13           1       0           126      18\n14           7       1           425      65\n15           7       0           409      47\n16           4       1           245      46\n17           4       0           260      29",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>discipline</th>\n      <th>gender</th>\n      <th>applications</th>\n      <th>awards</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>1</td>\n      <td>83</td>\n      <td>22</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>0</td>\n      <td>39</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5</td>\n      <td>1</td>\n      <td>135</td>\n      <td>26</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>0</td>\n      <td>39</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>6</td>\n      <td>1</td>\n      <td>67</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>0</td>\n      <td>9</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2</td>\n      <td>1</td>\n      <td>230</td>\n      <td>33</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>2</td>\n      <td>0</td>\n      <td>166</td>\n      <td>32</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>8</td>\n      <td>1</td>\n      <td>189</td>\n      <td>30</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>8</td>\n      <td>0</td>\n      <td>62</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>3</td>\n      <td>1</td>\n      <td>105</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>3</td>\n      <td>0</td>\n      <td>78</td>\n      <td>17</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>1</td>\n      <td>1</td>\n      <td>156</td>\n      <td>38</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>1</td>\n      <td>0</td>\n      <td>126</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>7</td>\n      <td>1</td>\n      <td>425</td>\n      <td>65</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>7</td>\n      <td>0</td>\n      <td>409</td>\n      <td>47</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>4</td>\n      <td>1</td>\n      <td>245</td>\n      <td>46</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>4</td>\n      <td>0</td>\n      <td>260</td>\n      <td>29</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,26 +135,6 @@
     "G = d2.gender\n",
     "N = d2.applications\n",
     "A = d2.awards"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n<!-- Generated by graphviz version 7.0.6 (20230106.0513)\n -->\n<!-- Pages: 1 -->\n<svg width=\"67pt\" height=\"188pt\"\n viewBox=\"0.00 0.00 67.00 188.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 184)\">\n<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-184 63,-184 63,4 -4,4\"/>\n<!-- G -->\n<g id=\"node1\" class=\"node\">\n<title>G</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"36,-180 0,-180 0,-144 36,-144 36,-180\"/>\n<text text-anchor=\"middle\" x=\"18\" y=\"-158.3\" font-family=\"Times,serif\" font-size=\"14.00\">G</text>\n</g>\n<!-- A -->\n<g id=\"node2\" class=\"node\">\n<title>A</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"36,-36 0,-36 0,0 36,0 36,-36\"/>\n<text text-anchor=\"middle\" x=\"18\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">A</text>\n</g>\n<!-- G&#45;&gt;A -->\n<g id=\"edge1\" class=\"edge\">\n<title>G&#45;&gt;A</title>\n<path fill=\"none\" stroke=\"blue\" d=\"M16.38,-143.83C15.48,-133.47 14.45,-119.99 14,-108 13.4,-92.01 13.4,-87.99 14,-72 14.3,-64.04 14.85,-55.42 15.45,-47.49\"/>\n<polygon fill=\"blue\" stroke=\"blue\" points=\"18.93,-47.93 16.25,-37.68 11.95,-47.36 18.93,-47.93\"/>\n</g>\n<!-- D -->\n<g id=\"node3\" class=\"node\">\n<title>D</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"59,-108 23,-108 23,-72 59,-72 59,-108\"/>\n<text text-anchor=\"middle\" x=\"41\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">D</text>\n</g>\n<!-- G&#45;&gt;D -->\n<g id=\"edge3\" class=\"edge\">\n<title>G&#45;&gt;D</title>\n<path fill=\"none\" stroke=\"blue\" d=\"M23.69,-143.7C26.14,-136.24 29.07,-127.32 31.81,-118.97\"/>\n<polygon fill=\"blue\" stroke=\"blue\" points=\"35.11,-120.14 34.91,-109.54 28.46,-117.95 35.11,-120.14\"/>\n</g>\n<!-- D&#45;&gt;A -->\n<g id=\"edge2\" class=\"edge\">\n<title>D&#45;&gt;A</title>\n<path fill=\"none\" stroke=\"blue\" d=\"M35.31,-71.7C32.86,-64.24 29.93,-55.32 27.19,-46.97\"/>\n<polygon fill=\"blue\" stroke=\"blue\" points=\"30.54,-45.95 24.09,-37.54 23.89,-48.14 30.54,-45.95\"/>\n</g>\n</g>\n</svg>\n",
-      "text/plain": "<graphviz.graphs.Digraph at 0x147c74a50>"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g = nx.DiGraph([(\"G\", \"A\"), (\"G\", \"D\"), (\"D\", \"A\")])\n",
-    "draw(g, node_shapes=\"o\")"
    ]
   },
   {
@@ -355,6 +355,28 @@
     "    A = pm.Binomial(\"AA\", n=N, p=p, observed=A)\n",
     "    t2 = pm.sample(1000, tune=1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n<!-- Generated by graphviz version 7.0.6 (20230106.0513)\n -->\n<!-- Pages: 1 -->\n<svg width=\"67pt\" height=\"188pt\"\n viewBox=\"0.00 0.00 67.00 188.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 184)\">\n<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-184 63,-184 63,4 -4,4\"/>\n<!-- G -->\n<g id=\"node1\" class=\"node\">\n<title>G</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"36,-180 0,-180 0,-144 36,-144 36,-180\"/>\n<text text-anchor=\"middle\" x=\"18\" y=\"-158.3\" font-family=\"Times,serif\" font-size=\"14.00\">G</text>\n</g>\n<!-- A -->\n<g id=\"node2\" class=\"node\">\n<title>A</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"36,-36 0,-36 0,0 36,0 36,-36\"/>\n<text text-anchor=\"middle\" x=\"18\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">A</text>\n</g>\n<!-- G&#45;&gt;A -->\n<g id=\"edge1\" class=\"edge\">\n<title>G&#45;&gt;A</title>\n<path fill=\"none\" stroke=\"blue\" d=\"M16.38,-143.83C15.48,-133.47 14.45,-119.99 14,-108 13.4,-92.01 13.4,-87.99 14,-72 14.3,-64.04 14.85,-55.42 15.45,-47.49\"/>\n<polygon fill=\"blue\" stroke=\"blue\" points=\"18.93,-47.93 16.25,-37.68 11.95,-47.36 18.93,-47.93\"/>\n</g>\n<!-- D -->\n<g id=\"node3\" class=\"node\">\n<title>D</title>\n<polygon fill=\"none\" stroke=\"black\" points=\"59,-108 23,-108 23,-72 59,-72 59,-108\"/>\n<text text-anchor=\"middle\" x=\"41\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">D</text>\n</g>\n<!-- G&#45;&gt;D -->\n<g id=\"edge3\" class=\"edge\">\n<title>G&#45;&gt;D</title>\n<path fill=\"none\" stroke=\"blue\" d=\"M23.69,-143.7C26.14,-136.24 29.07,-127.32 31.81,-118.97\"/>\n<polygon fill=\"blue\" stroke=\"blue\" points=\"35.11,-120.14 34.91,-109.54 28.46,-117.95 35.11,-120.14\"/>\n</g>\n<!-- D&#45;&gt;A -->\n<g id=\"edge2\" class=\"edge\">\n<title>D&#45;&gt;A</title>\n<path fill=\"none\" stroke=\"blue\" d=\"M35.31,-71.7C32.86,-64.24 29.93,-55.32 27.19,-46.97\"/>\n<polygon fill=\"blue\" stroke=\"blue\" points=\"30.54,-45.95 24.09,-37.54 23.89,-48.14 30.54,-45.95\"/>\n</g>\n</g>\n</svg>\n",
+      "text/plain": "<graphviz.graphs.Digraph at 0x147c74a50>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = nx.DiGraph([(\"G\", \"A\"), (\"G\", \"D\"), (\"D\", \"A\")])\n",
+    "draw(g, node_shapes=\"o\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
